Update RatingService.java